# gator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Acknowledgements.md  Contributing.md  Maintainers.md  README-mobile-studio.md  README-mobilestudio.md  README-mobilesuite.md  README.md  README_Streamline.txt  build-android.sh  build-common.sh  build-linux.sh  gator_me.py  pom.xml  release-notes.md  streamline_me.py
annotate/: .clang-tidy  CMakeLists.txt  LICENSE  Makefile  StreamlineAnnotate.java  readme.txt  streamline_annotate.c  streamline_annotate.h  streamline_annotate_logging.h
daemon/: Android.mk  AnnotateListener.cpp  AnnotateListener.h  Application.mk  AtraceDriver.cpp  AtraceDriver.h  BlockCounterFrameBuilder.cpp  BlockCounterFrameBuilder.h  BlockCounterMessageConsumer.cpp  BlockCounterMessageConsumer.h  Buffer.cpp  Buffer.h  BufferUtils.cpp  BufferUtils.h  CCNDriver.cpp  CCNDriver.h  CMakeLists.txt  CapturedSpe.h  CapturedXML.cpp  CapturedXML.h  Child.cpp  Child.h  ClassBoilerPlate.h  Collector.cpp  Collector.h  Command.cpp  Command.h  CommitTimeChecker.h  Config.h  Configuration.h  ConfigurationXML.cpp  ConfigurationXML.h  ConfigurationXMLParser.cpp  ConfigurationXMLParser.h  Constant.cpp  Constant.h  ConstantMode.h  Counter.h  CounterXML.cpp  CounterXML.h  (+285 more)
daemon/agents/: agent_environment.cpp  agent_environment.h  agent_worker.h  agent_worker_base.h  agent_workers_process.h  agent_workers_process_fwd.h  agent_workers_process_holder.cpp  agent_workers_process_holder.h  spawn_agent.cpp  spawn_agent.h
daemon/android/: AndroidActivityManager.cpp  AndroidActivityManager.h  AppGatorRunner.cpp  AppGatorRunner.h  GatorAndroidSetupHandler.cpp  GatorAndroidSetupHandler.h  GpuTimelineLayerManager.cpp  GpuTimelineLayerManager.h  GpuTimelineLayerRunner.cpp  GpuTimelineLayerRunner.h  IAppGatorRunner.h  PropertyUtils.cpp  PropertyUtils.h  Spawn.cpp  Spawn.h  ThermalDriver.cpp  ThermalDriver.h  Utils.cpp  Utils.h
daemon/apc/: misc_apc_frame_ipc_sender.h  perf_apc_frame_utils.h  perf_counter.h  summary_apc_frame_utils.h
daemon/armnn/: AcceptedSocketQueue.h  ArmNNDriver.cpp  ArmNNDriver.h  ArmNNSource.cpp  ArmNNSource.h  ByteOrder.h  CaptureMode.h  CounterDirectoryDecoder.cpp  CounterDirectoryDecoder.h  CounterDirectoryStateUtils.cpp  CounterDirectoryStateUtils.h  DecoderUtility.cpp  DecoderUtility.h  Driver.cpp  Driver.h  DriverSourceIpc.cpp  DriverSourceIpc.h  DriverSourceWithAgent.cpp  DriverSourceWithAgent.h  FrameBuilderFactory.cpp  FrameBuilderFactory.h  GlobalState.cpp  GlobalState.h  IAcceptingSocket.h  IAcceptor.h  ICaptureController.h  ICounterConsumer.h  ICounterDirectoryConsumer.h  IEncoder.h  IFrameBuilderFactory.h  IGlobalState.h  IPacketConsumer.h  IPacketDecoder.h  IPerJobCounterCaptureConsumer.h  IPerJobCounterSelectionConsumer.h  IPeriodicCounterCaptureConsumer.h  IPeriodicCounterSelectionConsumer.h  ISender.h  ISession.h  ISessionConsumer.h  (+39 more)
daemon/async/: asio_traits.h  async_buffer.hpp  async_byte_reader.hpp  async_line_reader.hpp  completion_handler.h
daemon/capture/: CaptureProcess.cpp  CaptureProcess.h  Environment.cpp  Environment.h
daemon/cmake/: build-target.cmake  clang-tools.cmake  compiler-flags.cmake  concatenate-files.cmake  create-src-md5-runner.cmake  create-src-md5.cmake  escape-runner.cmake  escape.cmake  escape.template  split-strip.cmake
daemon/escape/: CMakeLists.txt  escape.c
daemon/hwcpipe2/: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Jenkinsfile  commitlint.config.js  package-lock.json  package.json
daemon/ipc/: async_streamline_sender.h  codec.h  message_key.h  message_traits.h  messages.h  raw_ipc_channel_sink.h  raw_ipc_channel_source.h  responses.h
daemon/lib/: Assert.cpp  Assert.h  AutoClosingFd.h  CpuIdSet.h  EnumUtils.h  Error.cpp  Error.h  File.cpp  File.h  FileDescriptor.cpp  FileDescriptor.h  Format.h  FsEntry.cpp  FsEntry.h  FsUtils.h  GenericTimer.h  Istream.h  LineReader.cpp  LineReader.h  Memory.h  Optional.h  PmuCommonEvents.h  Popen.cpp  Popen.h  Process.cpp  Process.h  Resource.cpp  Resource.h  SharedMemory.h  Span.h  StaticVector.h  String.h  Syscall.cpp  Syscall.h  Thread.cpp  Thread.h  Throw.h  Time.h  TimestampSource.cpp  TimestampSource.h  (+16 more)
daemon/libsensors/: .clang-tidy  access.c  conf-lex.c  conf-parse.c  conf-parse.h  data.c  error.c  general.h  init.c  scanner.h  sensors.h  sysfs.c  sysfs.h
daemon/linux/: CoreOnliner.cpp  CoreOnliner.h  PerCoreIdentificationThread.cpp  PerCoreIdentificationThread.h  SysfsSummaryInformation.cpp  SysfsSummaryInformation.h  Tracepoints.cpp  Tracepoints.h  smmu_identifier.cpp  smmu_identifier.h  smmu_support.cpp  smmu_support.h
daemon/logging/: absl_log_adapter.h  agent_log.cpp  agent_log.h  configuration.h  file_log_sink.cpp  file_log_sink.h  global_log.cpp  global_log.h  log_sink_t.h  logger_t.h  logging.cpp  parameters.h  protobuf_log_adapter.h  std_log_sink.h  suppliers.cpp  suppliers.h
daemon/mali_userspace/: IMaliHwCntrReader.h  MaliDevice.cpp  MaliDevice.h  MaliDeviceApi.cpp  MaliDeviceApi.h  MaliDeviceApi_DdkDefines.h  MaliGPUClockPolledDriver.cpp  MaliGPUClockPolledDriver.h  MaliGPUClockPolledDriverCounter.h  MaliHwCntr.h  MaliHwCntrDriver.cpp  MaliHwCntrDriver.h  MaliHwCntrNames.h  MaliHwCntrNamesBifrost.h  MaliHwCntrNamesGenerated.h  MaliHwCntrReader.cpp  MaliHwCntrReader.h  MaliHwCntrSource.cpp  MaliHwCntrSource.h  MaliHwCntrTask.cpp  MaliHwCntrTask.h  MaliInstanceLocator.cpp  MaliInstanceLocator.h
daemon/metrics/: definitions.cpp  definitions.hpp  group_generator.cpp  group_generator.hpp  metric_group_set.cpp  metric_group_set.hpp
daemon/mxml/: config.h  mxml-attr.c  mxml-entity.c  mxml-file.c  mxml-get.c  mxml-index.c  mxml-node.c  mxml-private.c  mxml-private.h  mxml-search.c  mxml-set.c  mxml-string.c  mxml.h  testmxml.c
daemon/non_root/: CounterHelpers.h  GlobalCounter.h  GlobalPoller.cpp  GlobalPoller.h  GlobalStateChangeHandler.cpp  GlobalStateChangeHandler.h  GlobalStatsTracker.cpp  GlobalStatsTracker.h  (+18 more)
notify/: CMakeLists.txt  Makefile  Notify.java
setup/: CMakeLists.txt  Makefile  aarch64.s  armv7.s  gator_setup
(+576 files in other folders)
